fix button-style2 width on mobile screen

--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -141,7 +141,7 @@ body {
   color: #7a7a7a;
 }
 .button-style2__link {
-  transform: translateX(-12.5px);
+  margin-left: -12px;
   width: 100%;
   border-radius: 20px;
   padding-left: 24px;
