--- a/scss/components/_button.scss
+++ b/scss/components/_button.scss
@@ -60,7 +60,8 @@
   }
 
   &__link {
-    transform: translateX(-12.5px);
+    // transform: translateX(-12.5px);
+    margin-left:-12px;
     width: 100%;
     border-radius: 20px;
     padding-left: 24px;
